--- a/ninh-hong/style.css
+++ b/ninh-hong/style.css
@@ -299,6 +299,52 @@
 	background-color: rgba(0, 0, 0, 0.5);
 	z-index: 1000;
 }
+
+/* Spinner animation */
+.spinner {
+	border: 6px solid rgba(255, 255, 255, 0.3);
+	border-top: 6px solid #fff;
+	border-radius: 50%;
+	width: 50px;
+	height: 50px;
+	animation: spin 1s linear infinite;
+}
+
+/* Spinner animation keyframes */
+@keyframes spin {
+	0% {
+			transform: rotate(0deg);
+	}
+	100% {
+			transform: rotate(360deg);
+	}
+}
+
+.custom-popup {
+	font-family: 'SVN-gotham';
+}
+
+.custom-title {
+	font-weight: bold;
+}
+
+.custom-confirm-button {
+	text-align: center;
+	display: inline-block;
+	border: 2px solid #111;
+	padding: 10px 20px !important;
+	margin: 5px 20px !important;
+	border-radius: 20px !important;
+	font-style: normal;
+	background-color: transparent;
+	color: #111;
+
+	font-size: 13px;
+	font-weight: 400;
+
+	text-transform: uppercase;
+	font-weight: bold;
+}
 /* Spinner animation */
 .spinner {
 	border: 6px solid rgba(255, 255, 255, 0.3);
@@ -535,50 +581,52 @@
     max-width: 800px;
     height: 600px;
     position: relative;
-    overflow: hidden; /* <===  */
+    overflow: hidden; /* Ẩn phần ảnh vượt ngoài slider */
     border-radius: 15px;
     margin-top: 50px;
-  }
+}
   
-  .slide {
+.slide {
     width: 100%;
-    max-width: 800px;
-    height: 350px;
+    height: 100%;
     position: absolute;
     transition: all 0.5s;
-  }
+}
   
-  .slide img {
+.slide img {
     width: 100%;
-    height: 700px;
-    object-fit: cover;
-  }
-  
-  .btn {
+    height: 100%;
+    object-fit: cover;  /* Đảm bảo ảnh vừa với 2 bên khung */
+    object-position: center; /* Căn giữa ảnh */
+}
+
+/* Nút điều hướng */
+.btn {
     position: absolute;
     width: 40px;
     height: 40px;
     padding: 10px;
     border: none;
     border-radius: 50%;
-    z-index: 10px;
+    z-index: 10;
     cursor: pointer;
     background-color: #fff;
     font-size: 18px;
     color: #111;
-  }
-  .btn:active {
+}
+.btn:active {
     transform: scale(1.1);
-  }
-  .btn-prev {
+}
+.btn-prev {
     top: 45%;
     left: 2%;
-  }
+}
   
-  .btn-next {
+.btn-next {
     top: 45%;
     right: 2%;
-  }
+}
+
   
 .top-line{
     display: flex;
